# UtilityToolkit

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/: README.md
include/core/: utkexports.hpp
include/dispatchers/: utkdispatch.hpp
include/logger/: utkloggers.hpp
include/types/: utklogentry.hpp  utkmetadata.hpp  utkstates.hpp
include/types/schema/: Schema.hpp  SchemaBuilder.hpp
scripts/: README.md
scripts/cmake/: CommonFlags.cmake  GlobFiles.cmake  PythonInfo.cmake
scripts/py/: clean_build_artifacts.py  create_utktool.py  ensure_dependencies.py  get_project_info.py  list_tools_built.py
src/: CMakeLists.txt
src/utkdispatch/: CMakeLists.txt  utkdispatch.cpp
src/utklogger/: CMakeLists.txt  utkloggers.cpp
tests/: README.md
